--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Extended Mind - Backend
-***********************
+The Extended Mind
+*****************
 
-This is the home project for the Extended Mind backend.
+This is the root of The Extended Mind code repository.
