--- a/org/troikalearning/troikalearning/translations/fi/LC_MESSAGES/messages.po
+++ b/org/troikalearning/troikalearning/translations/fi/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2012-12-05 22:02+0200\n"
-"PO-Revision-Date: 2012-12-05 22:03+0200\n"
+"POT-Creation-Date: 2012-12-05 22:17+0200\n"
+"PO-Revision-Date: 2012-12-05 22:18+0200\n"
 "Last-Translator: Timo Tiuraniemi <timo.tiuraniemi@iki.fi>\n"
 "Language-Team: fi <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -927,3 +927,11 @@ msgstr "Onnistuneesti pidetyt Troikat."
 #: troikalearning/templates/user.html:6
 msgid "User"
 msgstr "Käyttäjä"
+
+#: troikalearning/templates/user.html:12
+msgid "User information"
+msgstr "Käyttäjätiedot"
+
+#: troikalearning/templates/user.html:27
+msgid "Update"
+msgstr "Päivitä"
