Fixed typos in Finnish text

--- a/org/troikalearning/troikalearning/translations/fi/LC_MESSAGES/messages.po
+++ b/org/troikalearning/troikalearning/translations/fi/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2012-12-07 22:00+0200\n"
-"PO-Revision-Date: 2012-12-07 22:20+0200\n"
+"PO-Revision-Date: 2012-12-12 09:47+0200\n"
 "Last-Translator: Timo Tiuraniemi <timo.tiuraniemi@iki.fi>\n"
 "Language-Team: fi <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -647,14 +647,14 @@ msgid ""
 "          able to join your Troika, limited of course by the maximum number "
 "of participants you have specified."
 msgstr ""
-"Kun sinä ja kaksi muuta ihmisitä olette löytäneet toisenne Troika-"
-"tapahtumassa, saatte meltä sähköpostin, joka sisältää sähköpostiosoitteenne. "
-"Jos Troikan luoja antoi jo kaikki tarvittavat tiedot Troika-tapahtumasta, "
-"Troika on nyt aktiivinen. Jos tiedot olivat vielä vajaat, tässä vaiheessa "
-"teidän tulee päättää puuttuvista tiedoista. Kun nämä tiedot on täytetty "
-"palveluun, Troika-tapahtuman voi aktivoida klikkaamalla \"Aktivoi Troika\". "
-"Tämän jälkeen myös muut voivat liittyä mukaan Troikaan asettamanne "
-"osallistujamäärän ylärajan mukaisesti."
+"Kun sinä ja kaksi muuta ihmistä olette löytäneet toisenne Troika-"
+"tapahtumassa, saatte meiltä sähköpostin, joka sisältää "
+"sähköpostiosoitteenne. Jos Troikan luoja antoi jo kaikki tarvittavat tiedot "
+"Troika-tapahtumasta, Troika on nyt aktiivinen. Jos tiedot olivat vielä "
+"vajaat, tässä vaiheessa teidän tulee päättää puuttuvista tiedoista. Kun nämä "
+"tiedot on täytetty palveluun, Troika-tapahtuman voi aktivoida klikkaamalla "
+"\"Aktivoi Troika\". Tämän jälkeen myös muut voivat liittyä mukaan Troikaan "
+"asettamanne osallistujamäärän ylärajan mukaisesti."
 
 #: troikalearning/templates/about.html:57
 msgid "Learn Stuff."
