--- a/org/troikalearning/troikalearning/translations/fi/LC_MESSAGES/messages.po
+++ b/org/troikalearning/troikalearning/translations/fi/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2012-12-12 10:45+0200\n"
-"PO-Revision-Date: 2012-12-12 10:45+0200\n"
+"PO-Revision-Date: 2012-12-12 11:06+0200\n"
 "Last-Translator: Timo Tiuraniemi <timo.tiuraniemi@iki.fi>\n"
 "Language-Team: fi <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -537,7 +537,7 @@ msgid ""
 "recognize their own abilities, skills and\n"
 "        knowledge."
 msgstr ""
-"jakamaan ja luomaan uutta tietoa. Haluamme innostaa ihimisiä tunnistamaan "
+"jakamaan ja luomaan uutta tietoa. Haluamme innostaa ihmisiä tunnistamaan "
 "heidän omat kykynsä ja tietonsa. Haluamme poistaa ne esteet, jotka "
 "tyypillisesti estävät tiedon jakamista tapahtumasta."
 
